--- a/my-learning-app/backend/.env
+++ b/my-learning-app/backend/.env
@@ -1,39 +1,1 @@
-const express = require('express');
-const { GoogleGenerativeAI } = require('@google/generative-ai');
-require('dotenv').config();
-
-const app = express();
-app.use(express.json()); // Middleware to parse JSON bodies
-
-// Initialize Gemini
-const genAI = new GoogleGenerativeAI(process.env.GEMINI_API_KEY);
-
-// Create an endpoint to handle requests
-app.post('/generate', async (req, res) => {
-    const { topic, type } = req.body; // type can be 'notes', 'facts', or 'quiz'
-    const model = genAI.getGenerativeModel({ model: "gemini-pro"});
-
-    let prompt = '';
-    if (type === 'notes') {
-        prompt = `Generate concise, easy-to-understand study notes on the topic of "${topic}". Use markdown for headings and bullet points.`;
-    } else if (type === 'facts') {
-        prompt = `Generate 3 surprising and fun facts about "${topic}".`;
-    } else if (type === 'quiz') {
-        prompt = `Create a 5-question multiple-choice quiz on "${topic}". For each question, provide 4 options (A, B, C, D) and specify the correct answer. Format the output as a JSON array of objects.`;
-    }
-
-    try {
-        const result = await model.generateContent(prompt);
-        const response = await result.response;
-        const text = response.text();
-        res.json({ content: text });
-    } catch (error) {
-        console.error(error);
-        res.status(500).send('Error generating content.');
-    }
-});
-
-const PORT = 3000;
-app.listen(PORT, () => {
-    console.log(`Server running on http://localhost:${PORT}`);
-});
+GEMINI_API_KEY=AIzaSyCPq4acdlwtY0DI6trGuEoqn4NqcSVQSVY
